compiler/tests/fail/arm-m4/mov_shiftedw_set_flags.jazz
export
fn main(reg u32 x) {
    ?{}, x = #MOVS(0x0000cb00);
    [x] = x;
}
